--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -47,3 +47,12 @@
     font-size: 2.3rem;  
 }
 
+.createAccount{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.createAccount a{
+    padding: 0;
+    margin-left: 5px;
+}
