--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -21,8 +21,9 @@
     padding:0;
     margin-right: 5px;
 }
-.content-title{
+.content-title a{
     color: black;
+    text-decoration: none;
     /* font-size: 25px; */
     /* text-align: center !important; */
 }
@@ -48,6 +49,9 @@
     width: 30px;
     border-radius: 50%;
 }
+.content-share-icon p {
+    margin-bottom: 0
+}
 
 
 /* ====================================================================== */
@@ -59,6 +63,7 @@
 
 .three-card-group .card-body{
     padding: 0;
+    margin-bottom: 5vh;
 }
 .three-card-group .card-body .content-title{
     padding: 0;
@@ -99,7 +104,7 @@
 /* ========================================================= */
 /* Vegan Books */
 .vegan-books{
-    margin-top: 10vh;
+    margin-top: 5vh;
     margin-bottom: 10vh;
 }
 .vegan-books .jumbotron {
@@ -193,14 +198,11 @@
 /* ==================================================== */
 
 .new-recipe .jumbotron{
-    /* background-attachment: fixed; */
     background-color: #cccccc;
     height: fit-content;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    /* margin-bottom:  25vh  */
-
 }
 .new-recipe h1{
     font-size: 33px;
@@ -310,6 +312,80 @@
 }
 
 
+/* global styles */
+a{
+    color:black;
+}
+a:hover,
+.latest-recipes a:hover,
+.content-title a:hover,
+.popular-week-title a:hover{
+    color: #504f4f
+}
+
+.jumbotron-content .card-text, p, button,input{
+    font-family: 'Catamaran', sans-serif;
+}
+.content-title, h1,h2,h3,h4,h5,h6,
+.content-author p,
+.category-img-container p,
+.latest-recipes a{
+    font-family: 'Merriweather', serif;
+    color: black;
+}
+
+.card{
+    border: none;
+}
+ul li{
+    list-style: none;
+}
+.card-body{
+    text-align: initial;
+}
+.mask p{
+    margin-top: 10px;
+}
+ .mask p:first-child{
+    margin-right: 20px;
+}
+.mask .card-icon{
+    font-weight: lighter;
+    color: #a5a5a5;
+}
+.card-share-icon{
+    margin: 0;
+    border: 1px solid #f1eeee;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+.category-container{
+    border: 1px solid #c4cac7
+
+}
+
+.category{
+    text-align: center;
+    font-family: Catamaran,sans-serif;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: .1em;
+    color: #2d2d28;
+    position: relative;
+    top: -29px;
+    padding: 0px 16px;
+    background-color: #fff;
+    z-index: 5;
+    margin-bottom: 5px;
+    width: fit-content;
+    margin: auto;
+}
+
 
 /* // Small devices (landscape phones, 576px and up) */
 @media (min-width: 300px) { 
@@ -406,61 +482,3 @@
 
 
 
-
-a{
-    color: black;
-}
-
-.jumbotron-content .card-text, p, button,input{
-    font-family: 'Catamaran', sans-serif;
-}
-.content-title, h1,h2,h3,h4,h5,h6,
-.content-author p,
-.category-img-container p,
-.latest-recipes a{
-    font-family: 'Merriweather', serif;
-    color: black;
-}
-
-.card{
-    border: none;
-}
-ul li{
-    list-style: none;
-}
-.card-body{
-    text-align: initial;
-}
-.mask p{
-    margin-top: 10px;
-}
- .mask p:first-child{
-    margin-right: 20px;
-}
-.mask .card-icon{
-    font-weight: lighter;
-    color: #a5a5a5;
-}
-.category-container{
-    border: 1px solid #c4cac7
-
-}
-
-.category{
-    text-align: center;
-    font-family: Catamaran,sans-serif;
-    font-size: 12px;
-    text-transform: uppercase;
-    /* font-weight: 600; */
-    letter-spacing: .1em;
-    color: #2d2d28;
-    /* display: inline-block; */
-    position: relative;
-    top: -29px;
-    padding: 0px 16px;
-    background-color: #fff;
-    z-index: 5;
-    margin-bottom: 5px;
-    width: fit-content;
-    margin: auto;
-}
