--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -17,6 +17,9 @@
     padding: 0.9rem 1rem;
     max-width: 540px;
 }
+/* .home .jumbotron-content .card-body{
+    padding: 0;
+} */
 .jumbotron-content .nav-link{
     padding:0;
     margin-right: 5px;
@@ -48,9 +51,10 @@
 .content-author p .text-muted{
     margin-top: -6px;
 }
-.content-img img {
+.content-author  img {
     width: 30px;
     border-radius: 50%;
+    margin-right: 3px;
 }
 .content-share-icon p {
     margin-bottom: 0
