--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -168,6 +168,7 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 2rem;
+    font-size: 13px;
 }
 /* ==================================================== */
 .newsLetter{
