--- a/src/public/css/newRecipe.css
+++ b/src/public/css/newRecipe.css
@@ -4,3 +4,58 @@
 .getRecipe{
     margin-bottom: 3vh;
 }
+.requiredNutrients{
+    margin-bottom: 15px;
+}
+.ingredient-container{
+}
+.additional-field{
+    display: flex;
+}
+.add-input{
+    /* border: 2px dotted red; */
+}
+.ingredient-items{
+    padding: 0;
+}
+.ingredient-item{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #483f8c;
+}
+.ingredient-container-dressing {
+    /* border-top: 2px solid #dadada; */
+}
+.ingredient-container-dressing h6, .ingredient-container-main h6 {
+    margin-top: 5vh;
+    margin-bottom: 2vh;
+}
+
+/* // Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) { 
+    .ingredient-container-dressing h6, .ingredient-container-main h6 {
+        margin-top: 0vh;
+        
+    }
+    
+    .ingredient-container-dressing {
+        border-top: none;
+        border-left: 1px solid #cababa;
+    }
+    
+ }
+
+/* // Large devices (desktops, 992px and up) */
+@media (min-width: 992px) { 
+   
+ 
+ }
+
+/* // X-Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) { 
+
+}
+
+/* // XX-Large devices (larger desktops, 1400px and up) */
+@media (min-width: 1400px) {  }
