--- a/src/public/css/newRecipe.css
+++ b/src/public/css/newRecipe.css
@@ -70,6 +70,13 @@
         margin-right: 10px
         
     }
+    .imgThumbnail{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-end;
+        margin-top: 6vh;
+    }
     
  }
 
