--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -123,9 +123,9 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
-.vegan-jumbotron{
+/* .vegan-jumbotron{
     width: 18rem
-}
+} */
 .vegan-books .card-title{
     font-size: 1.7rem;
 }
