--- a/src/public/css/singleRecipe.css
+++ b/src/public/css/singleRecipe.css
@@ -75,7 +75,7 @@
 /* ================================================================= */
 
 .cover-tags{
-    margin: -3vh 0 5vh;
+    margin: 0 0 5vh;
 }
 .coverImg-card-container{
     display: flex;
