--- a/src/components/CustomPagination/CustomPagination.module.css
+++ b/src/components/CustomPagination/CustomPagination.module.css
@@ -1,6 +1,6 @@
 .CustomPagination {
     position: absolute;
-    width: 100%;
+    width: inherit;
     bottom: 0;
     .linkSpan{
         border: none;
