--- a/src/components/Nav/navbar.css
+++ b/src/components/Nav/navbar.css
@@ -1,13 +1,19 @@
-
+.header{
+    /* margin-bottom: 3rem; */
+    /* border: 2px dotted red; */
+}
 
 .navbar-nav {
     display: flex;
     flex-direction: column;
     padding-left: 0;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 }
-.navbar-expand-lg .navbar-collapse {
+.logo-nav{
+    padding: 2rem 4rem 0 4rem
+}
+/* .navbar-expand-lg .navbar-collapse {
     border-bottom: 2px solid black;
     border-image: linear-gradient(
         to left,
@@ -15,6 +21,9 @@
         rgb(10, 10, 10) 50%,
         rgba(236, 236, 236, 0) 100%
     ) 0 0 100% 0/0 0 3px 0 stretch;
+} */
+.mobileViewNav{
+    display: none
 }
 
 
@@ -29,12 +38,44 @@
    box-sizing: border-box;
 }
 
+.brand-foodie{
+    display: none
+}
+.main-menu{
+    border-top: 1px solid #ededed;
+    border-bottom: 1px solid #ededed;
+}
+.nav-list-items{
+    margin-top: 5rem;
+}
+.nav-list-items li {
+    border: none;
+    padding: 2rem 0 0 2rem;
+}
 
- @media (max-width: 990px) {
-    .navbar-nav{
-        position: absolute;
-        z-index: 5;
-        background-color:whitesmoke;
-        width: 90%;
+@media (max-width: 990px) {
+.navbar-nav{
+    /* position: absolute; */
+    /* z-index: 5; */
+    /* background-color:whitesmoke; */
+    width: 90%;
+}
+.logo-nav{
+    padding: 1rem 2rem 0 2rem;
+}
+}
+
+@media (max-width: 767.98px) { 
+    .showDesktopHeader{
+        display: none !important
+    }
+    .logo-nav{
+        display: none !important
+    }
+    .brand-foodie{
+        display: block
+    }
+    .mobileViewNav{
+        display: block
     }
  }
