--- a/src/pages/Recipes/AllRecipes/allRecipes.module.css
+++ b/src/pages/Recipes/AllRecipes/allRecipes.module.css
@@ -1,4 +1,7 @@
 .AllRecipes{
+    margin-top: 2rem;
+    border: 2px dotted red;
+    
     .mobileNavigationContainer{
         display: none;
     }
