--- a/src/pages/Dashboard/Dashboard.module.css
+++ b/src/pages/Dashboard/Dashboard.module.css
@@ -1,11 +1,19 @@
 .Dashboard {
+    height: 81vh;
+    overflow: auto;
     .DashboardSection{
+    }
+    .cardContainer{
+        /* height: 90vh; */
+        overflow: auto;
     }
     .mobileNavigationContainer{
         display: none;
+        /* height: 89.5vh; */
     }
     .desktopContainer{
-        border : 1px solid #c4cac7;
+        /* border : 1px solid #c4cac7; */
+        height: 80.5vh;
     }
     .dropdown-menu{
         border: none
@@ -14,17 +22,45 @@
         margin-left: 10px;
     }
 }
+/* .dashboardUserContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.imageContent img{
+    width: 60px;
+    border-radius: 50%;
+    text-align: center;
+    margin-bottom: 1vh;
+}
+.dashboardUserName{
+    font-size: 12px;
+} */
+
+.canvasBodyContainer{
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    /* align-items: center; */
+}
 
 @media (max-width: 990px) {
    .Dashboard{
+    height: initial;
        .desktopContainer{
             display: none;
         }
         .mobileNavigationContainer{
             display: block;
         }
+    }
+    .canvasContainer{
+        /* position: relative !important; */
+        /* border: 2px dotted red; */
+        top: 0px !important;
     } 
 }
-.offcanvas-parent {
-    position: relative;
+.offcanvas-lg {
   }
