--- a/src/components/Dashboard/Events/Forms/EventDetails/EventDetails.module.css
+++ b/src/components/Dashboard/Events/Forms/EventDetails/EventDetails.module.css
@@ -22,6 +22,7 @@
         label{
             font-weight: 600
         }
+        
         .eventTime{
             input{
                 max-width: 200px;
@@ -48,6 +49,13 @@
                 border: 2px dotted #ccee
             }
             
+        }
+        .isError{
+            border: 1px solid salmon
+        }
+        .errorMessage{
+            color: salmon;
+            font-size: smaller;
         }
     }
 }
