--- a/src/pages/Dashboard/Dashboard.module.css
+++ b/src/pages/Dashboard/Dashboard.module.css
@@ -3,6 +3,7 @@
     overflow: auto;
     .cardContainer{
         overflow: auto;
+        overflow-x: hidden;
     }
     .mobileNavigationContainer{
         display: none;
