--- a/src/components/Dashboard/Events/AddEvent/AddEvent.module.css
+++ b/src/components/Dashboard/Events/AddEvent/AddEvent.module.css
@@ -1,4 +1,7 @@
 .AddEvent {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
     .EventAction{
         display: flex;
         justify-content: flex-start;
