--- a/src/components/Dashboard/Events/Forms/AdditionalSettings/AdditionalSettings.module.css
+++ b/src/components/Dashboard/Events/Forms/AdditionalSettings/AdditionalSettings.module.css
@@ -1,4 +1,8 @@
 .AdditionalSettings {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
     .sectionHeader{
         border-bottom: 1px solid #ccee;
         display: flex;
@@ -22,5 +26,8 @@
         label{
             font-weight: 600
         }
+    }
+    .Directions{
+        margin-top: auto;
     }
 }
