--- a/src/components/Dashboard/Events/Forms/CreateTicket/CreateTicket.module.css
+++ b/src/components/Dashboard/Events/Forms/CreateTicket/CreateTicket.module.css
@@ -1,4 +1,8 @@
 .CreateTicket {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
     .sectionHeader{
         border-bottom: 1px solid #ccee;
         display: flex;
@@ -48,5 +52,8 @@
             color: salmon;
             font-size: smaller;
         }
+    }
+    .Directions{
+        margin-top: auto;
     }
 }
