--- a/src/components/Dashboard/Events/Forms/Publish/Publish.module.css
+++ b/src/components/Dashboard/Events/Forms/Publish/Publish.module.css
@@ -1,8 +1,11 @@
 .Publish {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
     .sectionHeader{
-        border-bottom: 1px solid #ccee;
         display: flex;
-        justify-content: flex-start;
+        justify-content: center;
         align-items: center;
         height: 75px;
         .sectionNumber {
@@ -16,5 +19,8 @@
         .sectionName{
             margin-bottom: -5px;
         }
+    }
+    .Directions{
+        margin-top: auto;
     }
 }
