--- a/src/components/Dashboard/Events/Forms/FormDirection/FormDirection.module.css
+++ b/src/components/Dashboard/Events/Forms/FormDirection/FormDirection.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 30px;
     .previous,
     .next{
         border-radius: 3px;
