added about event

--- a/src/pages/Events/Forms/Details/Details.module.css
+++ b/src/pages/Events/Forms/Details/Details.module.css
@@ -1,1 +1,10 @@
-.Details {}
+.Details {
+    
+    .isError{
+        border: 1px solid salmon
+    }
+    .errorMessage{
+        color: salmon;
+        font-size: smaller;
+    }
+}
