--- a/src/components/Dashboard/Events/Forms/PreviewTicket/PreviewTicket.module.css
+++ b/src/components/Dashboard/Events/Forms/PreviewTicket/PreviewTicket.module.css
@@ -29,7 +29,7 @@
         flex-direction: row;
         flex-grow: 1;
         gap: 2rem;
-        justify-content: end;
+        justify-content: flex-end;
         align-items: center;
         .activePreviewTab{
             border-bottom: 2px solid grey;
