--- a/src/components/NewSingleRecipe/Reviews/ReviewList/reviewList.css
+++ b/src/components/NewSingleRecipe/Reviews/ReviewList/reviewList.css
@@ -79,3 +79,14 @@
 .reviewLists::-webkit-scrollbar-corner {
     background: transparent;
 }
+
+.review{
+    /* border: 2px dotted red; */
+    border: 1px solid rgba(0,0,0,.125);
+    margin-bottom: 20px;
+}
+.reviewComment{
+    /* border: 1px solid rgba(0,0,0,.125); */
+    /* padding: 0; */
+    margin-top: -15px;
+}
