added pdf preview and download

--- a/src/components/Dashboard/Recipes/CookBookManager/CookBookPreview/CookBookPreview.module.css
+++ b/src/components/Dashboard/Recipes/CookBookManager/CookBookPreview/CookBookPreview.module.css
@@ -1,1 +1,13 @@
-.CookBookPreview {}
+.CookBookPreview {
+    .pdfContainer{
+        border: 2px dotted black;
+        /* width: 400px; */
+        /* width: fit-content; */
+        width: 99%;
+        margin: auto;
+        overflow-x: scroll;
+    }
+    canvas {
+        width: 100% !important
+    }
+}
