--- a/src/components/Dashboard/Recipes/CookBookManager/CookBookPreview/CookBookPreview.module.css
+++ b/src/components/Dashboard/Recipes/CookBookManager/CookBookPreview/CookBookPreview.module.css
@@ -5,6 +5,7 @@
         overflow-x: scroll;
     }
     canvas {
-        width: 100% !important
+        width: 100% !important;
+        height: 100% !important
     }
 }
